--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -1,3 +1,12 @@
 .dashboard{
     padding-top: 100px;
 }
+
+.dashboard header{
+    background: #00F7CE;
+    padding: 30px 0;
+}
+
+.dashboard .dashboard-title{
+    font-size: 30pt;
+}
