--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,3 +1,26 @@
 .login{
     padding-top: 100px;
 }
+
+.login .login-form{
+    display: inline-block;
+    width: 90vw;
+    border: 2px solid #555;
+    border-radius: 10px;
+    padding: 20px;
+    -webkit-box-shadow: 0px 0px 25px 0px #aaa;
+    -moz-box-shadow: 0px 0px 25px 0px #aaa;
+    box-shadow: 0px 0px 25px 0px #aaa;
+}
+
+.login label{
+    padding: 5px;
+}
+
+.login input{
+    margin-bottom: 20px;
+}
+
+.login button{
+    margin: 20px;
+}
