--- a/src/css/winrate.css
+++ b/src/css/winrate.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+*{
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
     line-height: 1.5;
