--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -1,8 +1,7 @@
 .landing-page header{
     background-color: #00F7CE;
     color: white;
-    padding-top: 100px;
-    padding-bottom: 30px;
+    padding: 40px 0px;
     /*clip-path: polygon(0 0, 100% 0, 100% 92%, 0 100%);*/
 }
 
@@ -78,6 +77,7 @@ html, body, #root, [data-reactroot],
     background-color: rgba(0, 0, 0, .5);
     margin-top: 30px;
     position: absolute;
+    padding: 10px 0px;
 }
 
 .landing-page .overlay-top .feature{
