--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,25 +1,49 @@
 nav{
     background-color: #333;
     color: #fff;
-    height: 60px;
-    position: fixed;
     width: 100%;
+    text-align: left;
+    padding: 20px;
+    padding-bottom: 0px;
+    /*height: 70px;*/
+    overflow: hidden;
+}
+
+nav .top-li{
+    padding-bottom: 0px;
+}
+
+nav .nav-links{
+    max-height: 0px;
+    transition: all .3s ease;
+}
+
+.nav-expanded .nav-links{
+    max-height: 1000px;
 }
 
 nav li{
-    display: inline;
-    margin-right: 10px;
+    height: 60px;
 }
 
 nav a{
+    display: inline-block;
+    width: 100%;
+    margin-right: 10px;
+    border-bottom: 1px solid #888;
+    padding: 10px 0px;
     color: #fff;
     text-decoration: none;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    padding: 3px;
-    line-height: 60px;
+    font-size: 16pt;
+}
+
+nav .hamburger{
+    width: 40px;
+    position: absolute;
+    right: 30px;
 }
 
 nav a:hover{
     background-color: #555;
+    cursor: pointer;
 }
