cursor change on session hover

--- a/src/css/session.css
+++ b/src/css/session.css
@@ -3,6 +3,10 @@
     overflow: hidden;
 }
 
+.session .title:hover{
+    cursor: pointer;
+}
+
 .session .title{
     font-size: 18pt;
     padding: 10px 0;
