--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -1,7 +1,3 @@
-.dashboard{
-    padding-top: 100px;
-}
-
 .dashboard header{
     background: #00F7CE;
     padding: 30px 0;
@@ -9,4 +5,14 @@
 
 .dashboard .dashboard-title{
     font-size: 30pt;
+}
+
+.dashboard .recent-players{
+    width: 50%;
+    display: inline-block
+}
+
+.dashboard .most-played{
+    width: 50%;
+    display: inline-block
 }
