--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -25,5 +25,16 @@
     text-transform: uppercase;
     font-size: 12pt;
     letter-spacing: 2px;
-    padding: 6px 0 3px 0;
+    height: 25px;
+    padding-top: 2px;
+}
+
+.dashboard .recent-sessions-header a{
+    color: black;
+    text-decoration: none;
+}
+
+.dashboard .recent-sessions-header a:hover{
+    color: black;
+    text-decoration: underline;
 }
