fixed overall winrate sizing

--- a/src/css/overallwinrate.css
+++ b/src/css/overallwinrate.css
@@ -1,6 +1,7 @@
 .overall-winrate{
     padding: 20px 0;
 }
+
 .my-winrate-header{
     display: block;
     font-size: 14pt;
@@ -8,12 +9,12 @@
 }
 
 .my-winrate-wrapper{
-    font-size: 34pt;
+    font-size: 44px;
     display: inline-block;
     border-radius: 50%;
-    height: 25vw;
-    width: 25vw;
-    line-height: 25vw;
+    height: 150px;
+    width: 150px;
+    line-height: 150px;
     background: #F7097C;
 
 }
