--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -44,6 +44,10 @@ nav .hamburger{
     transition: all .2s ease;
 }
 
+nav .hamburger:hover{
+    cursor: pointer;
+}
+
 nav .rotated{
     transform: rotate(-90deg) scaleX(.7);
 }
