--- a/src/css/addSession.css
+++ b/src/css/addSession.css
@@ -1,3 +1,9 @@
 .add-session{
-    padding-top: 100px;
+    padding-top: 50px;
+    background: #00F7CE;
+    height: 100%;
+}
+
+.add-session form{
+    background: #fff;
 }
