--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -14,6 +14,7 @@ html, body, #root, [data-reactroot],
     background: #f7e956;
     color: #000;
     height: 100%;
+    padding-top: 70px;
 }
 
 .landing-page img{
@@ -33,7 +34,7 @@ html, body, #root, [data-reactroot],
 .landing-page button{
     margin: 30px 10px 0px 10px;
     background: #333;
-    border: 3px solid #f765ab;
+    border: 3px solid #fff;
     border-radius: 5px;
     color: #fff;
     font-family: 'Poppins', sans-serif;
@@ -44,7 +45,7 @@ html, body, #root, [data-reactroot],
 
 .landing-page button:hover{
     cursor:pointer;
-    background: #f765ab;
+    background: #fff;
     color: black;
     border: 3px solid #333;
 }
@@ -62,9 +63,7 @@ html, body, #root, [data-reactroot],
 }
 
 .landing-page .overlay{
-    overflow: hidden;
     height: 100%;
-    z-index: 2;
 }
 
 .landing-page .overlay-top{
