--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -7,6 +7,9 @@ nav{
     padding-bottom: 0px;
     /*height: 70px;*/
     overflow: hidden;
+    position: fixed;
+    z-index: 5;
+    transition: all .2s ease;
 }
 
 nav .top-li{
@@ -20,6 +23,10 @@ nav .nav-links{
 
 .nav-expanded .nav-links{
     max-height: 1000px;
+}
+
+.nav-expanded{
+    box-shadow: 0px 5px 30px #000;
 }
 
 nav li{
