--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -1,3 +1,9 @@
 .signup{
-    padding-top: 100px;
+    padding-top: 50px;
+    background: #00F7CE;
+    height: 100%;
+}
+
+.signup form{
+    background: #fff;
 }
