--- a/src/css/addSession.css
+++ b/src/css/addSession.css
@@ -1,7 +1,7 @@
 .add-session{
     padding-top: 100px;
+    padding-bottom: 30px;
     background: #00F7CE;
-    height: 100%;
 }
 
 .add-session form{
@@ -24,4 +24,8 @@
     text-align: left;
     display: inline-block;
     margin-bottom: 30px;
+}
+
+.add-session select{
+    
 }
