--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,3 +1,5 @@
+/* Global form styles */
+
 input[type='text'], input[type='password']{
     height: 45px;
     width: 300px;
@@ -36,6 +38,25 @@ form button:focus{
 }
 
 form button:hover{
+    border: 2px solid #F7097C;
+}
+
+form select{
+    width: 300px;
+    height: 45px;
+    border-radius: 5px;
+    border: 2px solid #444;
+    font-size: 18pt;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 20px;
+}
+
+select:focus{
+    outline: 1px solid #F7097C;
+}
+
+form select:hover{
     border: 2px solid #F7097C;
 }
 
