--- a/src/css/session.css
+++ b/src/css/session.css
@@ -16,10 +16,21 @@
 .session .session-info{
     max-height: 0px;
     transition: all .4s ease;
+    background: #fff;
+    font-size: 14pt;
+}
+
+.session .session-info section{
+    padding: 3px 0px;
 }
 
 .session .expanded + .session-info{
     max-height: 400px;
+    padding: 20px 0px;
+}
+
+.session .label{
+    font-weight: bold;
 }
 
 .session .delete-session{
@@ -28,4 +39,7 @@
     cursor: pointer;
     border: 1px solid #F7097C;
     border-radius: 20px;
+    padding: 0px 10px;
+    margin-top: 6px;
+    display: inline-block;
 }
