--- a/src/css/form.css
+++ b/src/css/form.css
@@ -66,7 +66,19 @@ form{
     border: 2px solid #555;
     border-radius: 10px;
     padding: 20px;
+    background: white;
     -webkit-box-shadow: 0px 0px 25px 0px #aaa;
     -moz-box-shadow: 0px 0px 25px 0px #aaa;
     box-shadow: 0px 0px 25px 0px #aaa;
+}
+
+@media screen and (min-width: 900px){
+    form{
+        width: 100%;
+    }
+
+    .login h1 {
+        font-size: 26pt;
+        margin: 30px;
+    }
 }
