--- a/src/css/winrate.css
+++ b/src/css/winrate.css
@@ -10,3 +10,19 @@ body{
     text-align: center;
     background: #00F7CE;
 }
+
+.desktop-only{
+    display: none;
+}
+
+@media screen and (min-width: 900px){
+    .page-container{
+        max-width: 800px;
+        width: 100%;
+        display: inline-block;
+    }
+
+    .desktop-only{
+        display: inline-block;
+    }
+}
