background color on desktop, more responsive changes

--- a/src/css/addSession.css
+++ b/src/css/addSession.css
@@ -25,3 +25,9 @@
     display: inline-block;
     margin-bottom: 30px;
 }
+
+@media screen and (min-width: 900px){
+    .add-session{
+        padding-top: 150px;
+    }
+}
