--- a/src/css/winrate.css
+++ b/src/css/winrate.css
@@ -16,10 +16,18 @@ body{
 }
 
 @media screen and (min-width: 900px){
+    body{
+        background: #777;
+    }
+
     .page-container{
         max-width: 800px;
         width: 100%;
+        height: 100%;
         display: inline-block;
+        background: #00F7CE;
+        border-left: 3px solid black;
+        border-right: 3px solid black;
     }
 
     .desktop-only{
