--- a/src/css/winrate.css
+++ b/src/css/winrate.css
@@ -15,9 +15,9 @@ body{
     display: none;
 }
 
-@media screen and (min-width: 900px){
+@media screen and (min-width: 800px){
     body{
-        background: #777;
+        background: #efefef;
     }
 
     .page-container{
@@ -27,6 +27,7 @@ body{
         background: #00F7CE;
         border-left: 3px solid black;
         border-right: 3px solid black;
+        box-shadow: 0 0 16px #444;
     }
 
     .desktop-only{
