added loader for login

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -21,6 +21,25 @@
     margin: 20px;
 }
 
+.login .hidden{
+    display: none;
+}
+
+.loader {
+    display: inline-block;
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #F7097C; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 @media screen and (min-width: 800px){
     .login{
         display: inline-block;
