--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -1,20 +1,26 @@
-.landing-page header{
-    background-color: #00F7CE;
-    color: white;
-    padding: 40px 0px;
-    /*clip-path: polygon(0 0, 100% 0, 100% 92%, 0 100%);*/
-}
-
 html, body, #root, [data-reactroot], 
 .landing-page{
     height: 100%;
 }
 
 .landing-page{
-    background: #f7e956;
     color: #000;
+    height: calc(100vh - 70px);
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.landing-page header{
+    background-color: #ccc;
+    color: white;
+    padding: 40px 0px;
+    /*clip-path: polygon(0 0, 100% 0, 100% 92%, 0 100%);*/
     height: 100%;
-    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .landing-page img{
@@ -23,13 +29,21 @@ html, body, #root, [data-reactroot],
     margin-bottom: 20px;
 }
 
+.landing-page .winrate-logo{
+    max-width: 800px;
+}
+
 .landing-page h2{
     font-size: 15pt;
     text-transform: lowercase;
     background: #333;
     display: inline;
-    padding: 0px 30px;
+    padding: 2px 50px;
     border-radius: 20px;
+}
+
+.landing-page .tagline{
+    margin-bottom: 85px;
 }
 
 .landing-page button{
@@ -40,7 +54,7 @@ html, body, #root, [data-reactroot],
     color: #fff;
     font-family: 'Poppins', sans-serif;
     font-size: 14pt;
-    padding: 3px 20px;
+    padding: 12px 60px;
     transition: all .2s ease;
 }
 
@@ -57,6 +71,11 @@ html, body, #root, [data-reactroot],
     font-size: 16pt;
 }
 
+.landing-page ul{
+    display: flex;
+    flex-direction: row;
+}
+
 .top-box{
     background-image: url(../../img/catan-bw.png);
 }
@@ -71,23 +90,26 @@ html, body, #root, [data-reactroot],
 
 .landing-page .overlay{
     height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .landing-page .overlay-top{
-    background: rgba(247, 233, 86, 0.8);
+    background: rgba(170, 170, 170, 0.8);
 }
 
 .landing-page .overlay-mid{
-    background: rgba(255, 91, 170, 0.8)
+    background: rgba(190, 190, 190, 0.8)
 }
 
 .landing-page .overlay-bottom{
-    background: rgba(162, 255, 109, 0.8)
+    background: rgba(241, 241, 241, 0.8)
 }
 
 .landing-page .box{
     display: block;
     height: 300px;
+    width: 33.33vw;
     background-size: cover;
     color: white;
     position: relative;
@@ -95,24 +117,42 @@ html, body, #root, [data-reactroot],
 }
 
 .landing-page .feature{
-    font-size: 22pt;
+    font-size: 16pt;
+    letter-spacing: 1px;
     color: white;
-    width: 50%;
     display: inline-block;
     background-color: rgba(0, 0, 0, .5);
-    margin-top: 30px;
-    position: absolute;
-    padding: 10px 0px;
+    width: 100%;
+    padding: 9px 10px;
 }
 
-.landing-page .overlay-top .feature{
-    left: 15px;
-}
+@media (max-width: 450px){
+    .landing-page h2{
+        font-size: 11pt;
+    }
 
-.landing-page .overlay-mid .feature{
-    position: relative;
-}
+    .winrate-logo{
+        margin-bottom: 10px;
+    }
 
-.landing-page .overlay-bottom .feature{
-    right: 15px;
+    .landing-page ul{
+        flex-direction: column;
+    }
+
+    .landing-page .box{
+        width: 100vw;
+        height: 200px;
+    }
+
+    .landing-page .tagline{
+        margin-bottom: 10px;
+    }
+
+    .landing-page button{
+        padding: 8px 15px;
+    }
+
+    .landing-page{
+        height: initial;
+    }
 }
