--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -9,7 +9,7 @@ nav{
     position: fixed;
     z-index: 5;
     transition: all .2s ease;
-    max-width: 800px;
+    /* max-width: 800px; */
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
